# F1-Database

./: .gitignore  .replit  CLAUDE_INTEGRATION.md  LLM_API_GUIDE.md  SETUP.md  alphavantage_config.csv  api.py  artemis_pull_config.csv  backfill_alphavantage.py  backfill_artemis.py  backfill_coingecko.py  backfill_defillama.py  backfill_velo.py  dashboard.py  db_schema.sql  db_schema_notes.md  defillama_config.csv  fix_production_schema.sql  generate_chart.py  import_entities.py  main.py  mcp_server.py  production_launcher.py  pyproject.toml  query_data.py  replit.md  requirements.txt  run_all_backfills.py  scheduler.py  sedwWnBOP  server.py  test_gap_check.py  test_velo_rate.py  velo_config.csv  wipe_metrics.py
attached_assets/: COINGECKO_HANDOVER_1769419179201.md  Pasted--172-31-79-162-37774-WebSocket-stcore-stream-403-INFO-c_1769540841487.txt  Pasted-026-01-28-12-27-06-40-57b91dc2-User-SMART-STARTUP-ANALY_1769600558867.txt  Pasted-2026-01-19T16-28-13Z-info-Deployment-948adb76-6cff-484c_1768840503500.txt  Pasted-2026-01-26-10-42-45-62-8b76a6bd-User-12-27-SPOT-FEES-98_1769421006155.txt  Pasted-2026-01-28-01-55-44-12-2f3a0e5f-System-starting-up-user_1769562331164.txt  Pasted-2026-01-28-02-25-48-28-9436e662-User-20-1769563618136_1769563618136.txt  Pasted-2026-01-28-09-51-03-57-60428377-User-scheduler-main-202_1769590315179.txt  Pasted-2026-01-28-12-26-48-63-57b91dc2-System-metasidecar-load_1769599798281.txt  Pasted-2026-01-28-12-50-18-80-b187d799-User-20-1769601042672_1769601042672.txt  Pasted-2026-01-28-12-54-48-05-5ddfb5be-System-metasidecar-load_1769601348309.txt  (+31 more)
(+25 files in other folders)
